[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Enimies/Enemy_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Circulo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enimies/Boss/Boss_1_2.gd" type="Script" id=3]
[ext_resource path="res://Assets/Enimies/Boss/Corpo_boss_1_2.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.5805

[sub_resource type="CircleShape2D" id=2]
radius = 33.3524

[sub_resource type="CircleShape2D" id=3]
radius = 32.6483

[sub_resource type="CircleShape2D" id=4]
radius = 26.1333

[sub_resource type="CircleShape2D" id=5]
radius = 27.4772

[sub_resource type="CircleShape2D" id=6]
radius = 28.1374

[sub_resource type="CircleShape2D" id=7]
radius = 23.8589

[sub_resource type="CircleShape2D" id=8]
radius = 24.3925

[sub_resource type="CircleShape2D" id=9]
radius = 24.0042

[sub_resource type="CircleShape2D" id=10]
radius = 19.1208

[sub_resource type="CircleShape2D" id=11]
radius = 19.9717

[sub_resource type="CircleShape2D" id=12]
radius = 20.4634

[node name="Boss" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="HurtBox" parent="." index="2"]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." index="4"]
MaxHealth = 40

[node name="VisibilityNotifier2D" parent="." index="5"]
position = Vector2( -3.05176e-05, 0 )

[node name="Timer_mov" type="Timer" parent="." index="6"]

[node name="Timer_parar" type="Timer" parent="." index="7"]
wait_time = 0.5

[node name="Corpo2" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( -56, 0 )

[node name="Timer_start" parent="Corpo2" index="3"]
wait_time = 5.1

[node name="CollisionShape2D" parent="Corpo2" index="4"]
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="Corpo2/HurtBox" index="0"]
shape = SubResource( 5 )

[node name="CollisionShape2D" parent="Corpo2/Hitbox" index="0"]
shape = SubResource( 6 )

[node name="Corpo3" parent="." index="9" instance=ExtResource( 4 )]
position = Vector2( -103, 0 )

[node name="Sprite" parent="Corpo3" index="0"]
position = Vector2( 0, 0 )
scale = Vector2( 1.5, 1.5 )

[node name="Timer_start" parent="Corpo3" index="3"]
wait_time = 5.2

[node name="CollisionShape2D" parent="Corpo3" index="4"]
shape = SubResource( 7 )

[node name="CollisionShape2D" parent="Corpo3/HurtBox" index="0"]
shape = SubResource( 8 )

[node name="CollisionShape2D" parent="Corpo3/Hitbox" index="0"]
position = Vector2( -0.263519, 0 )
shape = SubResource( 9 )

[node name="Corpo4" parent="." index="10" instance=ExtResource( 4 )]
position = Vector2( -140, 0 )

[node name="Sprite" parent="Corpo4" index="0"]
scale = Vector2( 1.2, 1.2 )

[node name="Timer_start" parent="Corpo4" index="3"]
wait_time = 5.3

[node name="CollisionShape2D" parent="Corpo4" index="4"]
shape = SubResource( 10 )

[node name="CollisionShape2D" parent="Corpo4/HurtBox" index="0"]
shape = SubResource( 11 )

[node name="CollisionShape2D" parent="Corpo4/Hitbox" index="0"]
shape = SubResource( 12 )

[node name="Timer_spawn" type="Timer" parent="." index="11"]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer_mov" to="." method="_on_Timer_mov_timeout"]
[connection signal="timeout" from="Timer_parar" to="." method="_on_Timer_parar_timeout"]
[connection signal="area_entered" from="Corpo2/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="Corpo3/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="Corpo4/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer_spawn" to="." method="_on_Timer_spawn_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Corpo2"]

[editable path="Corpo2/HurtBox"]

[editable path="Corpo2/Hitbox"]

[editable path="Corpo3"]

[editable path="Corpo3/HurtBox"]

[editable path="Corpo3/Hitbox"]

[editable path="Corpo4"]

[editable path="Corpo4/HurtBox"]

[editable path="Corpo4/Hitbox"]
