[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Enimies/Boss/Boss_1_2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enimies/Boss/Corpo_boss_1_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/snakecabeca.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/snakecorpo.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enimies/Boss/Boss_snake_paths.gd" type="Script" id=6]
[ext_resource path="res://Assets/Enimies/Boss/Itens_drop_boss.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 2293.66

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -46, 0 )
curve = null
script = ExtResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614

[node name="Corpo" parent="Path2D/PathFollow2D" instance=ExtResource( 2 )]

[node name="Sprite_corpo" parent="Path2D/PathFollow2D/Corpo" index="0"]
texture = ExtResource( 4 )

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D2" instance=ExtResource( 2 )]
health_to_explode = 6

[node name="Sprite_corpo" parent="Path2D/PathFollow2D2/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D2/Corpo" index="4"]
wait_time = 5.2

[node name="PathFollow2D3" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D3" instance=ExtResource( 2 )]
health_to_explode = 12

[node name="Sprite_corpo" parent="Path2D/PathFollow2D3/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D3/Corpo" index="4"]
wait_time = 5.4

[node name="PathFollow2D4" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D4" instance=ExtResource( 2 )]
health_to_explode = 18

[node name="Sprite_corpo" parent="Path2D/PathFollow2D4/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D4/Corpo" index="4"]
wait_time = 5.6

[node name="PathFollow2D5" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D5" instance=ExtResource( 2 )]
health_to_explode = 24

[node name="Sprite_corpo" parent="Path2D/PathFollow2D5/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D5/Corpo" index="4"]
wait_time = 5.8

[node name="PathFollow2D6" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D6" instance=ExtResource( 2 )]
health_to_explode = 30

[node name="Sprite_corpo" parent="Path2D/PathFollow2D6/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D6/Corpo" index="4"]
wait_time = 6.0

[node name="PathFollow2D7" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.847687, 0.949677 )
rotation = 0.904614
rotate = false

[node name="Corpo" parent="Path2D/PathFollow2D7" instance=ExtResource( 2 )]
health_to_explode = 36

[node name="Sprite_corpo" parent="Path2D/PathFollow2D7/Corpo" index="0"]
texture = ExtResource( 5 )

[node name="Timer" parent="Path2D/PathFollow2D7/Corpo" index="4"]
wait_time = 6.2

[node name="Stats" parent="." instance=ExtResource( 3 )]
MaxHealth = 42

[node name="Timer_veneno_corpo" type="Timer" parent="."]

[node name="Timer_poison_shot" type="Timer" parent="."]

[node name="Itens_drop" parent="." instance=ExtResource( 7 )]

[node name="Range" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )
[connection signal="Died" from="." to="Itens_drop" method="_on_Boss_Died"]
[connection signal="body_exploded" from="Path2D/PathFollow2D/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D2/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D2/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D3/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D3/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D4/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D4/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D5/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D5/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D6/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D6/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_exploded" from="Path2D/PathFollow2D7/Corpo" to="." method="_on_Corpo_body_exploded"]
[connection signal="area_entered" from="Path2D/PathFollow2D7/Corpo/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Path2D/PathFollow2D7/Corpo/Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer_veneno_corpo" to="." method="_on_Timer_veneno_corpo_timeout"]
[connection signal="timeout" from="Timer_poison_shot" to="." method="_on_Timer_poison_shot_timeout"]

[editable path="Path2D/PathFollow2D/Corpo"]

[editable path="Path2D/PathFollow2D2/Corpo"]

[editable path="Path2D/PathFollow2D3/Corpo"]

[editable path="Path2D/PathFollow2D4/Corpo"]

[editable path="Path2D/PathFollow2D5/Corpo"]

[editable path="Path2D/PathFollow2D6/Corpo"]

[editable path="Path2D/PathFollow2D7/Corpo"]

[editable path="Range"]
